# ggp-rs

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
env_logger/: fn.init.html  index.html
examples/: legal_player.rs  random_player.rs
gdl_parser/: enum.Clause.html  enum.Literal.html  enum.Sentence.html  enum.Term.html  fn.parse.html  index.html  sidebar-items.js  struct.Constant.html  struct.Description.html  struct.Distinct.html  struct.Function.html  struct.Not.html  struct.Or.html  struct.Proposition.html  struct.Relation.html  struct.Rule.html  struct.Variable.html
gdl_parser/visitor/: fn.visit.html  fn.visit_clause.html  fn.visit_constant.html  fn.visit_distinct.html  fn.visit_function.html  fn.visit_literal.html  index.html  (+10 more)
ggp_rs/: fn.run.html  index.html  macro.check_time!.html  macro.check_time_result!.html  sidebar-items.js  struct.Game.html  struct.Move.html  struct.Role.html  struct.State.html  trait.Player.html  type.MoveResult.html  type.Score.html
rand/: struct.AsciiGenerator.html  struct.Generator.html
regex/: enum.Regex.html  fn.is_match.html  fn.quote.html  struct.Captures.html  struct.FindCaptures.html  struct.FindMatches.html  struct.NoExpand.html  struct.RegexSplits.html  struct.RegexSplitsN.html  struct.SubCaptures.html  struct.SubCapturesNamed.html  struct.SubCapturesPos.html  trait.Replacer.html
resources/: eightpuzzle.gdl  nim-recursive1.gdl  nim-recursive2.gdl  nim.gdl  recursive.gdl  ruledepthexponential.gdl  tictactoe.gdl  tictactoe7.gdl
src/: game_manager.rs  gdl.rs  lib.rs  prover.rs  util.rs  visitor.rs
(+105 files in other folders)
