[package]
name = "ggp-rs"
version = "0.0.1"
authors = ["Gulshan Singh <gulshan@umich.edu>"]
description = "A library for creating General Game Playing (GGP) players"
license = "MIT"
repository = "https://github.com/gsingh93/ggp-rs"

[dependencies]
gdl-parser = "*"
env_logger = "*"
hyper = "*"
log = "*"
regex = "*"
regex_macros = "*"
rand = "*"
